@@ -2,36 +2,38 @@ package edu.wearpark.backend.security;
 
 import edu.wearpark.backend.repository.UserRepository;
 import edu.wearpark.backend.security.token.DetailedAuthToken;
+import edu.wearpark.backend.service.JwtService;
 import edu.wearpark.backend.util.JwtUtil;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import org.bson.types.ObjectId;
+import org.slf4j.Logger;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 /**
  * JWT authentication filter that intercepts incoming HTTP request
  * and validates the JWT token if present
  * @version 1.0
  */
+@Component
+@RequiredArgsConstructor
 public class JwtHttpFilter extends OncePerRequestFilter {
-    private final JwtUtil jwtUtil;
-    private final UserRepository userRepo;
-
-    /**
-     * Create a new {@link JwtHttpFilter}
-     * @param jwtUtil depends on {@link JwtUtil}
-     * @param userRepo depends on {@link UserRepository}
-     */
-    public JwtHttpFilter(JwtUtil jwtUtil, UserRepository userRepo) {
-        this.jwtUtil = jwtUtil;
-        this.userRepo = userRepo;
-    }
+    private final JwtService jwtService;
+    private final Logger log;
     /**
      * Filters each HTTP request to perform JWT-based authentication.
      *
@@ -47,12 +49,13 @@ public class JwtHttpFilter extends OncePerRequestFilter {
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
         try {
             String jwt = extractJwt(request);
-            jwtUtil.extractClaims(jwt, "login").ifPresent(claims -> {
-                userRepo.findById(new ObjectId(claims.getSubject())).ifPresent(user -> {
-                    var token = new DetailedAuthToken(user, Collections.emptyList());
-                    token.setAuthenticated(true);
-                    SecurityContextHolder.getContext().setAuthentication(token);
-                });
+            jwtService.getUserFromAuthToken(jwt).ifPresent(user -> {
+                List<GrantedAuthority> authorities = List.of(
+                        new SimpleGrantedAuthority("ROLE_" + user.getRole().toUpperCase())
+                );
+                var token = new DetailedAuthToken(user, authorities);
+                token.setAuthenticated(true);
+                SecurityContextHolder.getContext().setAuthentication(token);
             });
         } finally {
             filterChain.doFilter(request,response);
